fix issue with missing scrollbar

--- a/initiative-percentages-team-entry/src/style/app.css
+++ b/initiative-percentages-team-entry/src/style/app.css
@@ -25,5 +25,5 @@
 
 .x-grid-row-summary .x-grid-cell{
     border-style: solid;
-    border-top: thick double #000;
+    border-top: thick single #000;
 }
